@@ -16,33 +16,56 @@
 package com.coralblocks.coralme.example;
 
 import com.coralblocks.coralme.Order;
+import com.coralblocks.coralme.Order.RejectReason;
 import com.coralblocks.coralme.Order.Side;
 import com.coralblocks.coralme.Order.TimeInForce;
 import com.coralblocks.coralme.OrderBook;
 import com.coralblocks.coralme.OrderBookAdapter;
-import com.coralblocks.coralme.OrderBookListener;
 
 /**
- * <p>Run this test with <b>-verbose:gc</b> and look for any GC activity. <b>You must not see any.</b></p>
+ * <p>Manual garbage-collection smoke test for a warmed-up, capacity-stable order book workload.</p>
  * 
- * <p>Alternatively you can pass <i>true</i> to createGarbage to see a lot of GC activity.</p>
+ * <p>Build with <code>mvn package</code>, then run:</p>
  * 
- * <p>You should also decrease the max size of your heap memory so that if the GC has to kick in, it will do it sooner than later.</p>
+ * <p><code>java -Xlog:gc -Xms32m -Xmx64m -cp target/coralme-all.jar
+ * com.coralblocks.coralme.example.NoGCTest false 1000000</code></p>
  * 
- * <p>A good command-line example is:  <b><code>java -verbose:gc -Xms128m -Xmx256m -cp target/classes com.coralblocks.coralme.example.NoGCTest</code></b></p>
+ * <p>The normal run must show no collection pauses. Pass <code>true</code> as the first argument
+ * to enable a negative control that deliberately creates garbage and produces collection activity.</p>
  */
 public class NoGCTest {
 	
 	private static final long CLIENT_ID = 1002L;
+	private static final int PROGRESS_INTERVAL = 10_000;
 
 	private static final boolean USE_BAD_SYSTEM_OUT_PRINT = false; // turn this on and you will see a lot of garbage from System.out.print
 	private static final StringBuilder sb = new StringBuilder(1024);
+	private static volatile Object garbageSink;
 	private static long orderId = 1;
+
+	private static class WorkloadListener extends OrderBookAdapter {
+		private long rejectedOrders;
+
+		@Override
+		public void onOrderRejected(OrderBook orderBook, long time, Order order, RejectReason rejectReason) {
+			rejectedOrders++;
+		}
+	}
 	
-	private static CharSequence getClientOrderId() {
+	private static CharSequence getClientOrderId(long id) {
 		sb.setLength(0);
-		sb.append(orderId);
+		sb.append(id);
 		return sb;
+	}
+
+	private static void createLimit(OrderBook book, Side side, long size, double price, TimeInForce tif) {
+		long id = orderId++;
+		book.createLimit(CLIENT_ID, getClientOrderId(id), id, side, size, price, tif);
+	}
+
+	private static void createMarket(OrderBook book, Side side, long size) {
+		long id = orderId++;
+		book.createMarket(CLIENT_ID, getClientOrderId(id), id, side, size);
 	}
 	
 	private static void printWithoutGarbage(CharSequence cs) {
@@ -67,32 +90,36 @@ public class NoGCTest {
 		
 		boolean createGarbage = args.length >= 1 ? Boolean.parseBoolean(args[0]) : false;
 		int iterations = args.length >= 2 ? Integer.parseInt(args[1]) : 1000000;
+		if (iterations <= 0) throw new IllegalArgumentException("Iterations must be positive: " + iterations);
 		
-		OrderBookListener noOpListener = new OrderBookAdapter();
+		WorkloadListener listener = new WorkloadListener();
 		
-		OrderBook book = new OrderBook("AAPL", noOpListener);
+		OrderBook book = new OrderBook("AAPL", listener) {
+			@Override
+			protected RejectReason validateOrder(Order order) {
+				return order.getOriginalSize() % 100 == 0 ? null : RejectReason.BAD_LOT;
+			}
+		};
 		
 		for(int i = 1; i <= iterations; i++) {
 			
-			printIteration(i);
-			
 			// Bids:
-			book.createLimit(CLIENT_ID, getClientOrderId(),  orderId++,  Side.BUY, 1000, 100.00, TimeInForce.DAY);
-			book.createLimit(CLIENT_ID, getClientOrderId(),  orderId++,  Side.BUY,  900,  99.00, TimeInForce.DAY);
-			book.createLimit(CLIENT_ID, getClientOrderId(),  orderId++,  Side.BUY,  800,  98.00, TimeInForce.DAY);
-			book.createLimit(CLIENT_ID, getClientOrderId(),  orderId++,  Side.BUY,  700,  97.00, TimeInForce.DAY);
-			book.createLimit(CLIENT_ID, getClientOrderId(),  orderId++,  Side.BUY,  500,  95.00, TimeInForce.DAY);
+			createLimit(book, Side.BUY, 1000, 100.00, TimeInForce.DAY);
+			createLimit(book, Side.BUY, 900, 99.00, TimeInForce.DAY);
+			createLimit(book, Side.BUY, 800, 98.00, TimeInForce.DAY);
+			createLimit(book, Side.BUY, 700, 97.00, TimeInForce.DAY);
+			createLimit(book, Side.BUY, 500, 95.00, TimeInForce.DAY);
 			
 			// Asks:
-			book.createLimit(CLIENT_ID, getClientOrderId(),  orderId++,  Side.SELL,  500, 102.00, TimeInForce.DAY);
-			book.createLimit(CLIENT_ID, getClientOrderId(),  orderId++,  Side.SELL,  400, 104.00, TimeInForce.DAY);
-			book.createLimit(CLIENT_ID, getClientOrderId(),  orderId++,  Side.SELL,  800, 105.00, TimeInForce.DAY);
-			book.createLimit(CLIENT_ID, getClientOrderId(),  orderId++,  Side.SELL,  700, 108.00, TimeInForce.DAY);
-			book.createLimit(CLIENT_ID, getClientOrderId(),  orderId++, Side.SELL,  500, 115.00, TimeInForce.DAY);
+			createLimit(book, Side.SELL, 500, 102.00, TimeInForce.DAY);
+			createLimit(book, Side.SELL, 400, 104.00, TimeInForce.DAY);
+			createLimit(book, Side.SELL, 800, 105.00, TimeInForce.DAY);
+			createLimit(book, Side.SELL, 700, 108.00, TimeInForce.DAY);
+			createLimit(book, Side.SELL, 500, 115.00, TimeInForce.DAY);
 			
 			// Hit top of book with IOCs:
-			book.createLimit(CLIENT_ID, getClientOrderId(),  orderId++,  Side.BUY,  600, 103.00, TimeInForce.IOC);
-			book.createLimit(CLIENT_ID, getClientOrderId(),  orderId++,  Side.SELL, 900, 96.00,  TimeInForce.IOC);
+			createLimit(book, Side.BUY, 600, 103.00, TimeInForce.IOC);
+			createLimit(book, Side.SELL, 800, 96.00, TimeInForce.IOC);
 			
 			// Reduce and cancel top of book orders
 			Order bidOrder = book.getBestBidOrder();
@@ -102,29 +129,37 @@ public class NoGCTest {
 				// create some garbage for the garbage collector
 				sb.setLength(0);
 				sb.append("someGarbage"); // appending a CharSequence does not produce garbage
-				for(int x = 0; x < 10; x++) sb.toString(); // but this produces garbage
+				for(int x = 0; x < 10; x++) garbageSink = sb.toString(); // this produces garbage
 			}
 			
-			bidOrder.reduceTo(100);
+			bidOrder.reduceTo(900);
 			askOrder.reduceTo(100);
 			
 			bidOrder.cancel();
 			askOrder.cancel();
 			
-			// Order rejects due odd lot
-			book.createLimit(CLIENT_ID, getClientOrderId(),  orderId++,  Side.BUY,  620, 103.00, TimeInForce.DAY);
-			book.createLimit(CLIENT_ID, getClientOrderId(),  orderId++,  Side.SELL, 940, 96.00,  TimeInForce.DAY);
+			// Reject orders that are not round lots
+			createLimit(book, Side.BUY, 620, 103.00, TimeInForce.DAY);
+			createLimit(book, Side.SELL, 940, 96.00, TimeInForce.DAY);
 			
 			// Add a couple of more orders in the middle of the book
-			book.createLimit(CLIENT_ID, getClientOrderId(),  orderId++,  Side.BUY,  600, 96.00,  TimeInForce.DAY);
-			book.createLimit(CLIENT_ID, getClientOrderId(),  orderId++,  Side.SELL, 990, 111.00, TimeInForce.DAY);
+			createLimit(book, Side.BUY, 600, 96.00, TimeInForce.DAY);
+			createLimit(book, Side.SELL, 900, 111.00, TimeInForce.DAY);
 			
 			// Now use a market order to remove all liquidity from both sides
-			book.createMarket(CLIENT_ID, getClientOrderId(),  orderId++,  Side.BUY,  15000);
-			book.createMarket(CLIENT_ID, getClientOrderId(),  orderId++,  Side.SELL, 15000);
+			createMarket(book, Side.BUY, 15000);
+			createMarket(book, Side.SELL, 15000);
 			
 			// Book must now be empty
 			if (!book.isEmpty()) throw new IllegalStateException("Book must be empty here!");
+
+			if (i % PROGRESS_INTERVAL == 0 || i == iterations) printIteration(i);
+		}
+
+		long expectedRejectedOrders = iterations * 2L;
+		if (listener.rejectedOrders != expectedRejectedOrders) {
+			throw new IllegalStateException("Expected " + expectedRejectedOrders
+					+ " rejected orders but found " + listener.rejectedOrders);
 		}
 		
 		System.out.println(" ... DONE!");
